--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#procedures">Procedures</a></li>
-            <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
 
@@ -44,5 +42,6 @@
     <footer>
         <p>&copy; 2024 BlueWater Health. All rights reserved.</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
