--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlueWater Health MacroWave</title>
+    <title>BlueWater Health Clinical Hub</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     
     <header>
     <img src="logo.png" alt="BlueWater Health Logo" id="header-logo">
-    <h1> MacroWave</h1>
+    <h1> Clinical Hub</h1>
 </header>
     
     <nav>
@@ -35,13 +37,14 @@
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Please contact Dan Lapidus (dlapidus@bluewatherhealth.com) with any questions or input.</p>
+            <p>Please contact Dan Lapidus (dlapidus@bluewaterhealth.com) with any questions or input.</p>
         </section>
     </main>
 
     <footer>
         <p>&copy; 2024 BlueWater Health. All rights reserved.</p>
     </footer>
-    <script src="script.js"></script>
+    <script src="procedurescript.js"></script>
 </body>
+
 </html>
