--- a/Intubation.html
+++ b/Intubation.html
@@ -20,7 +20,7 @@
     
     <div class="container">
         <div class="form-section">
-            <h2>Intubation Procedure Note</h2>
+            <h2>Procedure Note: Intubation</h2>
             
             <div class="input-group">
                 <h3>Timeout</h3>
