--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
-    
+
     <header>
-    <img src="logo.png" alt="BlueWater Health Logo" id="header-logo">
-    <h1> Clinical Hub</h1>
-</header>
-    
+        <img src="logo.png" alt="BlueWater Health Logo" id="header-logo">
+        <h1>Clinical Hub</h1>
+    </header>
+
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
@@ -24,7 +24,16 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p>BlueWater Health's home for clinical documentation, guidelines, and more.</p>
+            <p>Welcome to BlueWater Health's Clinical Hub, your source for clinical documentation, guidelines, and decision tools.</p>
+        </section>
+
+        <!--Clinical Decision Tools Section -->
+        <section id="decision-tools">
+            <h2>Clinical Decision Tools</h2>
+            <ul>
+                <li><a href="HEARTscore.html">HEART Score</a></li>
+                <!-- Add more decision tools as needed -->
+            </ul>
         </section>
 
         <section id="procedures">
