--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <h2>Clinical Decision Tools</h2>
             <ul>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
+                <li><a href="PERCscore.html">PERC Score</a></li>
                 <!-- Add more decision tools as needed -->
             </ul>
         </section>
