--- a/PERCscore.html
+++ b/PERCscore.html
@@ -94,6 +94,6 @@
         <p><a href="index.html#procedures">Back to Procedures</a></p>
     </footer>
 
-<script src="percscore.js"></script>
+<script src="PERCscore.js"></script>
 </body>
 </html>
