--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
             <ul>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
                 <li><a href="PERCscore.html">PERC Score</a></li>
-                <!-- Add more decision tools as needed -->
             </ul>
         </section>
 
@@ -42,6 +41,7 @@
             <ul>
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Centralline.html">Central Line</a></li>
+                <li><a href="Laceration.html">Laceration</a></li>
             </ul>
         </section>
 
@@ -54,7 +54,6 @@
     <footer>
         <p>&copy; 2024 BlueWater Health. All rights reserved.</p>
     </footer>
-    <script src="procedurescript.js"></script>
 </body>
 
 </html>
