--- a/PERCscore.html
+++ b/PERCscore.html
@@ -91,9 +91,8 @@
 
     <footer>
         <p>&copy; 2024 BlueWater Health. All rights reserved.</p>
-        <p><a href="index.html#procedures">Back to Procedures</a></p>
     </footer>
 
-<script src="PERCscore.js"></script>
+<script src="percscore.js"></script>
 </body>
 </html>
