--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <ul>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
                 <li><a href="PERCscore.html">PERC Score</a></li>
+                <li><a href="Wellsscore.html">Wells' Score for PE</a></li>
             </ul>
         </section>
 
@@ -54,6 +55,7 @@
     <footer>
         <p>&copy; 2024 BlueWater Health. All rights reserved.</p>
     </footer>
+    <script src="procedurescript.js"></script>
 </body>
 
 </html>
