--- a/PERCscore.html
+++ b/PERCscore.html
@@ -92,6 +92,6 @@
         <p>&copy; 2024 BlueWater Health. All rights reserved.</p>
     </footer>
 
-<script src="percscore.js"></script>
+<script src="PERCscore.js"></script>
 </body>
 </html>
