--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <main>
         <section id="home">
             <h2>Home</h2>
-            <p>Welcome to BlueWater Health's Clinical Hub, your source for clinical documentation, guidelines, and decision tools.</p>
+            <p>Welcome to BlueWater Health's Clinical Hub- your source for clinical documentation, guidelines, and decision tools.</p>
         </section>
 
         <!--Clinical Decision Tools Section -->
