--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <li><a href="Centralline.html">Central Line</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
+                <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
             </ul>
         </section>
 
