--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <section id="decision-tools">
             <h2>Clinical Decision Tools</h2>
             <ul>
-                <li><a href="Canadianhead.html">Canadian Head CT</a></li>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
+                <li><a href="NEXUS.html">NEXUS C-spine</a></li>
                 <li><a href="PERCscore.html">PERC Score</a></li>
                 <li><a href="PECARNhead.html">PECARN Head</a></li>
                 <li><a href="Wellsscore.html">Wells' Score for PE</a></li>
@@ -46,6 +46,7 @@
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
+                
             </ul>
         </section>
 
