--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <section id="decision-tools">
             <h2>Clinical Decision Tools</h2>
             <ul>
+                <li><a href="Canadianhead.html">Canadian Head CT Rule</a></li>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
                 <li><a href="NEXUS.html">NEXUS C-spine</a></li>
                 <li><a href="PERCscore.html">PERC Score</a></li>
