--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <h2>Procedures</h2>
             <ul>
                 <li><a href="Centralline.html">Central Line</a></li>
+                <li><a href="Criticalcare.html">Critical Care</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
