--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <nav>
         <ul>
             <li><a href="#home">Home</a></li>
+            <li><a href="clinicalpathways.html">Clinical Pathways</a></li> <!-- New Link -->
         </ul>
     </nav>
 
@@ -27,7 +28,7 @@
             <p>Welcome to BlueWater Health's Clinical Hub- your source for clinical documentation, guidelines, and decision tools.</p>
         </section>
 
-        <!--Clinical Decision Tools Section -->
+        <!-- Clinical Decision Tools Section -->
         <section id="decision-tools">
             <h2>Clinical Decision Tools</h2>
             <ul>
@@ -40,6 +41,7 @@
             </ul>
         </section>
 
+        <!-- Procedures Section -->
         <section id="procedures">
             <h2>Procedures</h2>
             <ul>
@@ -48,10 +50,10 @@
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
-                
             </ul>
         </section>
 
+        <!-- Contact Section -->
         <section id="contact">
             <h2>Contact</h2>
             <p>Please contact Dan Lapidus (dlapidus@bluewaterhealth.com) with any questions or input.</p>
