--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         <section id="procedures">
             <h2>Procedures</h2>
             <ul>
+                <li><a href="Abscess.html">Abscess I/D</a></li>
                 <li><a href="Centralline.html">Central Line</a></li>
                 <li><a href="Criticalcare.html">Critical Care</a></li>
                 <li><a href="Intubation.html">Intubation</a></li>
