--- a/Abscess.html
+++ b/Abscess.html
@@ -72,7 +72,7 @@
                 <button data-section="result" onclick="handleButtonClick(this, 'purulent')">purulent</button>
                 <button data-section="result" onclick="handleButtonClick(this, 'bloody')">bloody</button>
                 <button data-section="result" onclick="handleButtonClick(this, 'serosanguinous')">serosanguinous</button>
-                <textarea id="resultText" placeholder="" onchange="updateRealTimeText('Result', 'resultText')"></textarea>
+                <textarea id="resultText" placeholder="Enter the volume of fluid returned here" onchange="updateRealTimeText('Result', 'resultText')"></textarea>
 
                 <h3>Complications</h3>
                 <button data-section="complications" onclick="handleButtonClick(this, 'none')">none</button>
