--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="Canadianhead.html">Canadian Head CT Rule</a></li>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
                 <li><a href="NEXUS.html">NEXUS C-spine</a></li>
+                <li><a href="NIHSS.html">NIH Stroke Scale</a></li>
                 <li><a href="PERCscore.html">PERC Score</a></li>
                 <li><a href="PECARNhead.html">PECARN Head</a></li>
                 <li><a href="Wellsscore.html">Wells' Score for PE</a></li>
