--- a/NIHSS.html
+++ b/NIHSS.html
@@ -88,7 +88,7 @@
             <div class="input-group">
                 <h3>Left arm motor drift</h3>
                 <button onclick="handleNIHButtonClick(this, 'Left arm motor drift', 0, 'No drift for 10 seconds')">No drift</button>
-                <button onclick="handleNIHButtonClick(this, 'Left arm motor drift', 1, 'Drift, but doesn't hit bed')">Mild drift</button>
+                <button onclick="handleNIHButtonClick(this, 'Left arm motor drift', 1, 'Mild drift')">Mild drift</button>
                 <button onclick="handleNIHButtonClick(this, 'Left arm motor drift', 2, 'Drift, hits bed')">Drift, hits bed</button>
                 <button onclick="handleNIHButtonClick(this, 'Left arm motor drift', 3, 'No effort against gravity')">No effort against gravity</button>
                 <button onclick="handleNIHButtonClick(this, 'Left arm motor drift', 4, 'No movement')">No movement</button>
@@ -98,7 +98,7 @@
             <div class="input-group">
                 <h3>Right arm motor drift</h3>
                 <button onclick="handleNIHButtonClick(this, 'Right arm motor drift', 0, 'No drift for 10 seconds')">No drift</button>
-                <button onclick="handleNIHButtonClick(this, 'Right arm motor drift', 1, 'Drift, but doesn't hit bed')">Mild drift</button>
+                <button onclick="handleNIHButtonClick(this, 'Right arm motor drift', 1, 'Mild drift')">Mild drift</button>
                 <button onclick="handleNIHButtonClick(this, 'Right arm motor drift', 2, 'Drift, hits bed')">Drift, hits bed</button>
                 <button onclick="handleNIHButtonClick(this, 'Right arm motor drift', 3, 'No effort against gravity')">No effort against gravity</button>
                 <button onclick="handleNIHButtonClick(this, 'Right arm motor drift', 4, 'No movement')">No movement</button>
@@ -108,7 +108,7 @@
             <div class="input-group">
                 <h3>Left leg motor drift</h3>
                 <button onclick="handleNIHButtonClick(this, 'Left leg motor drift', 0, 'No drift for 10 seconds')">No drift</button>
-                <button onclick="handleNIHButtonClick(this, 'Left leg motor drift', 1, 'Drift, but doesn't hit bed')">Mild drift</button>
+                <button onclick="handleNIHButtonClick(this, 'Left leg motor drift', 1, 'Mild drift')">Mild drift</button>
                 <button onclick="handleNIHButtonClick(this, 'Left leg motor drift', 2, 'Drift, hits bed')">Drift, hits bed</button>
                 <button onclick="handleNIHButtonClick(this, 'Left leg motor drift', 3, 'No effort against gravity')">No effort against gravity</button>
                 <button onclick="handleNIHButtonClick(this, 'Left leg motor drift', 4, 'No movement')">No movement</button>
@@ -118,7 +118,7 @@
             <div class="input-group">
                 <h3>Right leg motor drift</h3>
                <button onclick="handleNIHButtonClick(this, 'Right leg motor drift', 0, 'No drift for 10 seconds')">No drift</button>
-                <button onclick="handleNIHButtonClick(this, 'Right leg motor drift', 1, 'Drift, but doesn't hit bed')">Mild drift</button>
+                <button onclick="handleNIHButtonClick(this, 'Right leg motor drift', 1, 'Mild drift')">Mild drift</button>
                 <button onclick="handleNIHButtonClick(this, 'Right leg motor drift', 2, 'Drift, hits bed')">Drift, hits bed</button>
                 <button onclick="handleNIHButtonClick(this, 'Right leg motor drift', 3, 'No effort against gravity')">No effort against gravity</button>
                 <button onclick="handleNIHButtonClick(this, 'Right leg motor drift', 4, 'No movement')">No movement</button>
