--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <section id="decision-tools">
             <h2>Clinical Decision Tools</h2>
             <ul>
-                <li><a href="Canadianhead.html">Canadian Head CT Rule</a></li>
+                <li><a href="Canadianhead.html">Canadian Head CT</a></li>
                 <li><a href="HEARTscore.html">HEART Score</a></li>
                 <li><a href="NEXUS.html">NEXUS C-spine</a></li>
                 <li><a href="NIHSS.html">NIH Stroke Scale</a></li>
@@ -53,6 +53,14 @@
                 <li><a href="Intubation.html">Intubation</a></li>
                 <li><a href="Laceration.html">Laceration</a></li>
                 <li><a href="Lumbarpuncture.html">Lumbar Puncture</a></li>
+            </ul>
+        </section>
+        
+        <!-- POCUS Section -->
+        <section id="pocus">
+            <h2>Point-of-Care Ultrasound</h2>
+            <ul>
+                <li><a href="POCUSCardiac.html">Cardiac</a></li>
             </ul>
         </section>
 
