--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <h2>Point-of-Care Ultrasound</h2>
             <ul>
                 <li><a href="POCUSCardiac.html">Cardiac</a></li>
-                <li><a href="POCUSFast.html">E-Fast</a></li>
+                <li><a href="POCUSFast.html">E-FAST</a></li>
             </ul>
         </section>
 
