--- a/EKG.html
+++ b/EKG.html
@@ -42,7 +42,7 @@
                 <button data-section="Rate" onclick="handleButtonClick(this, 'Rate', 'normal')">normal</button>
                 <button data-section="Rate" onclick="handleButtonClick(this, 'Rate', 'tachycardic')">tachycardic</button>
                 <button data-section="Rate" onclick="handleButtonClick(this, 'Rate', 'bradycardic')">bradycardic</button>
-                <textarea id="rateText" placeholder="Enter rate information" onchange="updateRealTimeText('Rate', 'rateText')"></textarea>
+                <textarea id="rateText" placeholder="" onchange="updateRealTimeText('Rate', 'rateText')"></textarea>
             </div>
 
             <!-- Rhythm Section -->
@@ -54,7 +54,7 @@
                 <button data-section="Rhythm" onclick="handleButtonClick(this, 'Rhythm', 'junctional')">junctional</button>
                 <button data-section="Rhythm" onclick="handleButtonClick(this, 'Rhythm', 'paced')">paced</button>
                 <button data-section="Rhythm" onclick="handleButtonClick(this, 'Rhythm', 'supraventricular tachycardia')">supraventricular tachycardia</button>
-                <textarea id="rhythmText" placeholder="Enter rhythm information" onchange="updateRealTimeText('Rhythm', 'rhythmText')"></textarea>
+                <textarea id="rhythmText" placeholder="" onchange="updateRealTimeText('Rhythm', 'rhythmText')"></textarea>
             </div>
 
             <!-- Axis Section -->
@@ -63,7 +63,7 @@
                 <button data-section="Axis" onclick="handleButtonClick(this, 'Axis', 'normal')">normal</button>
                 <button data-section="Axis" onclick="handleButtonClick(this, 'Axis', 'left')">left</button>
                 <button data-section="Axis" onclick="handleButtonClick(this, 'Axis', 'right')">right</button>
-                <textarea id="axisText" placeholder="Enter axis information" onchange="updateRealTimeText('Axis', 'axisText')"></textarea>
+                <textarea id="axisText" placeholder="" onchange="updateRealTimeText('Axis', 'axisText')"></textarea>
             </div>
 
             <!-- Intervals Section -->
@@ -75,7 +75,7 @@
                 <button data-section="Intervals" onclick="handleButtonClick(this, 'Intervals', 'prolonged PR')">prolonged PR</button>
                 <button data-section="Intervals" onclick="handleButtonClick(this, 'Intervals', 'widened QRS')">widened QRS</button>
                 <button data-section="Intervals" onclick="handleButtonClick(this, 'Intervals', 'prolonged QTc')">prolonged QTc</button>
-                <textarea id="intervalsText" placeholder="Enter interval information" onchange="updateRealTimeText('Intervals', 'intervalsText')"></textarea>
+                <textarea id="intervalsText" placeholder="" onchange="updateRealTimeText('Intervals', 'intervalsText')"></textarea>
             </div>
 
             <!-- Conduction Section -->
@@ -88,7 +88,7 @@
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'Mobitz type I')">Mobitz type I</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'Mobitz type II')">Mobitz type II</button>
                 <button data-section="Conduction" onclick="handleButtonClick(this, 'Conduction', 'complete heart block')">complete heart block</button>
-                <textarea id="conductionText" placeholder="Enter conduction information" onchange="updateRealTimeText('Conduction', 'conductionText')"></textarea>
+                <textarea id="conductionText" placeholder="" onchange="updateRealTimeText('Conduction', 'conductionText')"></textarea>
             </div>
 
             <!-- Ischemia Section -->
